==> xuos/xiuos_part/Ubiquitous/XiZi_IIoT/board/stm32l476rgt6/third_party_driver/uart/connect_usart.c <==
#include <board.h>
#include <connect_usart.h>
#define BSP_USING_UART1

static void UartIsr(struct SerialBus *serial, struct SerialDriver *serial_drv, struct SerialHardwareDevice *serial_dev)
{
    // struct Stm32UsartDma *dma = &serial->dma; 
    struct SerialCfgParam *serial_cfg = (struct SerialCfgParam *)serial_drv->private_data;
    struct UsartHwCfg *serial_hw_cfg = (struct UsartHwCfg *)serial_cfg->hw_cfg.private_data;

    if (__HAL_UART_GET_FLAG(serial_hw_cfg->uart_device, UART_FLAG_RXNE) != RESET) {
        SerialSetIsr(serial_dev, SERIAL_EVENT_RX_IND);
    }
    HAL_UART_IRQHandler(serial_hw_cfg->uart_device);
}
